objects/Tranche_Party__c.object
<CustomObject>
    <fields>
        <fullName>Facility_Amount_Formula__c</fullName>
        <formula>Facility_Party__r.Facility_Amount_Formula__c</formula>
        <label>Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Amount__c</fullName>
        <label>Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Party</label>
        <referenceTo>Facility_Party__c</referenceTo>
        <relationshipLabel>Tranche Parties</relationshipLabel>
        <relationshipName>Tranche_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Percentage_Formula__c</fullName>
        <formula>Facility_Party__r.Facility_Percentage_Formula__c</formula>
        <label>Facility Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facility_Percentage__c</fullName>
        <label>Facility Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facility_Tranche__c</fullName>
        <label>Facility Tranche</label>
        <referenceTo>Facility_Tranche__c</referenceTo>
        <relationshipLabel>Tranche Parties</relationshipLabel>
        <relationshipName>Tranche_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Party_Type__c</fullName>
        <formula>Facility_Party__r.Party_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Type</label>
        <type>Text</type>
    </fields>
    <label>Tranche Party</label>
    <nameField>
        <label>Tranche Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tranche Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Specify_Lender_Portions_Only_for_Lenders</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Party_Type__c &lt;&gt; &quot;Lender&quot;, 
OR (NOT(ISBLANK( Facility_Amount__c )), 
NOT(ISBLANK( Facility_Percentage__c ))))</errorConditionFormula>
        <errorMessage>You may only specify a Facility Amount/Facility Percentage for a Lender.</errorMessage>
    </validationRules>
</CustomObject>